[package]
name = "proc-ctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proc-ctl"
path = "./cli/main.rs"

[[bin]]
name = "port-binder"
path = "./sample/port-binder/main.rs"

[dependencies]
netstat2 = "0.9.1"
thiserror = "1"
retry = { version = "2.0.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.11"
retry = "2.0.0"
proc-ctl = { path = ".", features = ["retry"] }

[features]
retry = [
    "dep:retry"
]
