[package]
name = "proc-ctl"
version = "0.1.0"
edition = "2021"
description = "A helper library for querying and manipulating processes"
license = "MPL-2.0"
repository = "https://github.com/EphyraSoftware/proc-ctl"

[[bin]]
name = "port-binder"
path = "./sample/port-binder/main.rs"

[dependencies]
netstat2 = "0.9.1"
thiserror = "1"
retry = { version = "2.0.0", optional = true }
tokio = { version = "1", features = ["time"], optional = true }
async-recursion = { version = "1", optional = true }

[dev-dependencies]
assert_cmd = "2.0.11"
retry = "2.0.0"
tokio = { version = "1", features = ["time", "rt", "macros"] }

[features]
resilience = [
    "dep:retry"
]

async = [
    "dep:tokio",
    "dep:async-recursion"
]
